--- a/twitter/src/App.css
+++ b/twitter/src/App.css
@@ -11,6 +11,20 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+} 
+
+div.transbox {
+  margin-top: 40%;
+  margin-left: 30%;
+  margin-right: 30%;
+  padding: 100%;
+  background-color: #ffffff;
+  border: 1px solid black;
+  opacity: 0.6;
 }
 
-
+div.transbox p {
+  margin: 5%;
+  font-weight: bold;
+  color: #000000;
+}
