added background-attachment in css

--- a/twitter/src/index.css
+++ b/twitter/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+    background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
     background-image: url(./twitterBackground.jpg);
