--- a/twitter/src/index.css
+++ b/twitter/src/index.css
@@ -5,11 +5,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  
+
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
     background-image: url(./twitterBackground.jpg);
+    max-width: 100%;
+    max-height: auto;
 }
 
 code {
