--- a/twitter/src/App.css
+++ b/twitter/src/App.css
@@ -2,6 +2,16 @@
   text-align: center;
 }
 
+body {
+  background-image: url(./twitterBackground.jpg);
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  max-width: 200%;
+  max-height: auto;
+}
+
+
 div.transbox {
   margin-top: 40%;
   margin-left: 30%;
