--- a/twitter/src/App.css
+++ b/twitter/src/App.css
@@ -1,28 +1,21 @@
-.App {
-  text-align: center;
-}
-
-body {
+.main {
   background-image: url(./twitterBackground.jpg);
-  background-attachment: fixed;
+  height: 100vh;
   background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
-  max-width: 200%;
-  max-height: auto;
 }
-
 
 div.transbox {
-  margin-top: 40%;
-  margin-left: 30%;
-  margin-right: 30%;
+  text-align: center;
+  display: flex;
   background-color: #ffffff;
   border: 1px solid black;
   opacity: 0.6;
 }
 
 div.transbox p {
-  margin: 5%;
+  /* margin: 0%; */
   font-weight: bold;
   color: #000000;
 }
