--- a/twitter/src/App.css
+++ b/twitter/src/App.css
@@ -6,7 +6,7 @@
   background-repeat: no-repeat;
 }
 
-div.transbox {
+div.transboxBg {
   text-align: center;
   display: flex;
   background-color: #ffffff;
