tweetTweet background for Random

--- a/twitter/src/App.css
+++ b/twitter/src/App.css
@@ -14,6 +14,14 @@
   background-repeat: no-repeat;
 }
 
+.random {
+  background-image: url(./tweetTweet.jpg);
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 div.transboxBg {
   text-align: center;
   display: flex;
